bugfix/ text overflow from message

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,15 @@
   margin-top: 40%;
   margin-bottom: 40%;
 }
+
+/*
+=======================================================================================
+
+ Global Classes (not supported by Tailwind)
+
+=======================================================================================
+*/
+
+.overflow-wrap-breakword {
+  overflow-wrap: break-word;
+}
